feat: Get user by their id
