# swagger.yaml
@@ -194,6 +194,21 @@ paths:
         '500':
           description: Internal server error
 
+    get:
+      tags:
+        - User
+      summary: Get a user by their ID
+      operationId: GetUserById
+      responses:
+        '200':
+          description: Success
+        '400':
+          description: Bad request
+        '404':
+          description: Not found
+        '500':
+          description: Internal server error
+
 components:
   schemas:
     RegisterUser:
